
  TODO: Let's wait the end of the freeze to upload to unstable. After this, it
  would be much safer to rebuild the embassy packages and update their
  orig.tar.gz, that did not change name upstream but was modified.

  * New upstream patch (patch-1-4), removing unnecessary whitespaces in
    edialign.acd.
  * debian/control uses the official homepage URL as confirmed by Upstream.

 -- Charles Plessy <plessy@debian.org>  Sun, 11 Jan 2009 15:09:08 +0900

emboss (6.0.1-3) experimental; urgency=low

  * New upstream patch (patch-1-3).
    - fixes segmentation fault in vectorscript when -auto is used with empty
      vectorsfile.
    - adds '.' trailer to the OS line in SwissProt output.
  * debian/rules: corrected the section of the manual pages of the renamed
    programs from 1 to 1e (Closes: #503733).
  * Preliminary support for jEMBOSS:
    - Build-Depend on openjdk-6-jdk (debian/control).
    - New package "jemboss", depending on openjdk-6-jre (debian/control).
    - The jemboss package contains everything installed by the command
      `make -C jemboss install' (debian/rules).

 -- Charles Plessy <plessy@debian.org>  Wed, 26 Nov 2008 08:57:20 +0900

emboss (6.0.1-2) experimental; urgency=low

  * New upstream patch (patch-1-1).
    - jaspscan can now scan multiple sequences.
    - "digest -allpartials" now reports all C-term fragments.

 -- Charles Plessy <plessy@debian.org>  Wed, 27 Aug 2008 22:11:45 +0900

emboss (6.0.1-1) experimental; urgency=low

  * New upstream release:
    - New applications: aligncopy, aligncopypair, consambig, density,
      featcopy, featreport, infobase, inforesidue, jaspextract, jaspscan,
      maskambignuc, maskambigprot, nohtml, nospace, notab, sizeseq,
      skipredundant, trimspace.
    - See `/usr/share/doc/emboss/changelog.gz' for more details.
  * debian/patches:
    - Removed the patches that are obsoleted by the new release.
    - Documented the local patch on `tfm' that changes default pager.