@@ -1,5 +1,4 @@
 usr/bin
 #usr/share/applications
-usr/lib
 etc/emboss/embossrc.d
 usr/share/man/man1
