@@ -1,3 +1,2 @@
-debian/emboss_tmp/usr/bin usr
 debian/emboss_tmp/usr/lib usr
 #debian/abiview.desktop usr/share/applications
